# schur

./: Cargo.toml  README.md  index.html
examples/: schur_3_10.txt  schur_3_11.txt  schur_3_12.txt  schur_3_8.txt  schur_3_9.txt  schur_4_14.txt  schur_4_44.txt  schur_5_40.txt  shur_3_13.txt  shur_3_7.txt  shur_5_66.txt
src/: check.rs  lib.rs  schur.rs  shur.rs  util.rs
src/algorithm/: mod.rs  random.rs  search.rs  simulation.rs
